# boot

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  LICENSE.txt  README.md  pom.xml
.github/workflows/: codeql-analysis.yml  maven-publish.yml  rule-engine-publish.yml  rule-engine.yml
boot-annotation/: pom.xml
boot-bom/: pom.xml
boot-dependencies/: pom.xml
boot-domain/: pom.xml
boot-extension/: pom.xml
boot-extension/boot-extension-core/: pom.xml
boot-extension/boot-extension-core/src/main/java/com.workoss.boot.extension/: Extensible.java  Extension.java  ExtensionClass.java  ExtensionException.java  ExtensionFactory.java  ExtensionLoader.java  ExtensionLoaderFactory.java  ExtensionLoaderListener.java  ExtensionLoaderUtil.java  Sortable.java  SpiExtensionFactory.java
boot-extension/boot-extension-spring/: pom.xml
boot-extension/cedar-java/: Cargo.toml  pom.xml
boot-extension/cedar-java/src/: interface.rs
boot-extension/cedar-java/src/main/java/com/cedarpolicy/: BasicAuthorizationEngine.java  CedarJson.java
boot-extension/cedar-java/src/main/java/com/cedarpolicy/model/: AuthorizationResponse.java  ValidationRequest.java  ValidationResponse.java
boot-extension/cedar-java/src/main/java/com/cedarpolicy/model/schema/: Schema.java
boot-extension/cedar-java/src/main/java/com/cedarpolicy/model/slice/: BasicSlice.java  TemplateInstantiation.java
boot-extension/cedar-java/src/main/resources/: libcedar_java-osx-x86_64.dylib
boot-extension/cedar-java/src/main/rust/: Cargo.toml
boot-extension/cedar-java/src/main/rust/src/: interface.rs
boot-extension/cedar-java/src/test/java/com/cedarpolicy/: CedarJsonTest.java  CedarTest.java  CustomBasicAuthorizationEngine.java
boot-extension/cedar-java/src/test/resources/: cedar_runtime.wasm
boot-extension/extension-core/: pom.xml
boot-extension/extension-spring/: pom.xml
boot-extension/ocr-java/: pom.xml
boot-extension/rule-engine/: Cargo.toml  Cross.toml  README.md  cargo.toml  cross.sh  pom.xml  rust-toolchain
boot-extension/rule-engine/src/: lib.rs
boot-extension/rule-engine/src/main/java/com/workoss/boot/engine/: EvaluateResult.java  EvaluateTraceData.java  EvaluateTraceResult.java  Makefile  RuleEngineException.java  ZenEngineLoader.java  ZenRuleEngine.java  ZenRuleEngineConfig.java  com_workoss_boot_engine_ZenEngineLoader.h
boot-extension/rule-engine/src/main/java/com/workoss/boot/util/: Environment.java  NativeLibraryLoader.java
boot-extension/rule-engine/src/main/resources/: libzen_engine-osx-aarch64.dylib  libzen_engine-osx-x86_64.dylib
boot-extension/rule-engine/src/main/rust/: Cargo.toml  cross.sh
boot-extension/rule-engine/src/main/rust/src/: lib.rs
boot-extension/rule-engine/src/test/java/com/workoss/boot/engine/: EvaluateResultTest.java  RuleEngineTest.java
boot-extension/wasm-plugin/: Cargo.toml  plugin.wasm  pom.xml
boot-extension/wasm-plugin/src/: lib.rs
boot-extension/wasm-plugin/src/main/java/com/workoss/boot/wasm/: Makefile  WasmPlugin.java  WasmPluginException.java  WasmPluginLoader.java
boot-extension/wasm-plugin/wit/: plugin.wit
boot-extension/wasm/cedar-runtime/: Cargo.toml
boot-extension/wasm/cedar-runtime/src/: lib.rs
boot-extension/wasm/rule-engine/src/: lib.rs
boot-http/: pom.xml
boot-http/http-core/: pom.xml
boot-http/http-netty/: pom.xml
boot-http/http-okhttp3/: pom.xml
boot-mybatis/: pom.xml
boot-mybatis/mybatis-plugin-api/: pom.xml
boot-mybatis/mybatis-plugin-api/src/main/resources/providerTemplate/default/: deleteById.xml  (+10 more)
boot-mybatis/mybatis-plugin-core/: pom.xml
boot-mybatis/mybatis-plugin-jakarta/: pom.xml
boot-mybatis/mybatis-plugin-jakarta-api/: pom.xml
boot-mybatis/mybatis-plugin-javax/: pom.xml
boot-mybatis/mybatis-plugin-javax-api/: pom.xml
boot-parent/: pom.xml
boot-starter/: pom.xml
boot-starter/ip-spring-boot-starter/: pom.xml
boot-starter/lock-spring-boot-starter/: pom.xml
boot-starter/lock-spring-boot-starter/src/main/resources/lua/: POLL_QUEUE.lua  UN_LOCK.lua
boot-starter/modulith-mybatis-spring-boot-starter/: pom.xml
boot-starter/policy-spring-boot-starter/: pom.xml
boot-starter/quick-web-spring-boot-starter/: pom.xml
boot-starter/quick-web-spring-boot-starter/src/main/resources/i18n/: message.properties  valid.properties
boot-starter/quick-web-spring-boot-starter/src/main/resources/lua/: LOCK.lua
boot-starter/storage-client-spring-boot-starter/: pom.xml
boot-storage/: pom.xml
boot-storage/aws-storage-client/: pom.xml
boot-storage/aws2-storage-client/: pom.xml
boot-storage/minio-storage-client/: pom.xml
boot-storage/storage-client-spring-boot-starter/: pom.xml
boot-storage/storage-core/: pom.xml
boot-storage/storage-core/src/test/resources/: log4j2.xml
boot-storage/storage-example/: pom.xml
boot-storage/storage-example/src/main/resources/: application.yml
boot-storage/storage-server/: pom.xml
boot-storage/storage-server/src/main/resources/: application.yml  banner.txt
boot-storage/storage-server/src/main/resources/db/: data.sql  schema.sql
boot-storage/storage-server/src/main/resources/i18n/: message.properties  valid.properties
boot-storage/storage-server/src/main/resources/static/: PostDemo.html
boot-util/: pom.xml
doc/: dict.md  mybatis-plugin.md  rule-engine.md  storage-client.md  storage-server.md
mybatis-plugin/: pom.xml
mybatis-plugin/mybatis-plugin-api/: pom.xml
mybatis-plugin/mybatis-plugin-core/: pom.xml
sapjco-spring-boot-starter/: pom.xml
src/checkstyle/: checkstyle-suppressions.xml  nohttp-checkstyle.xml
src/license/: file-header-description.ftl  license-header.txt  licenses.properties
src/license/my_license/: header.txt  license.txt
src/main/java/demo/: Demo.java
src/main/resources/: checkstyle-header.txt  checkstyle.xml
src/main/resources/intellij/: Intellij_Project_Defaults.xml  Intellij_Spring_Boot_Java_Conventions.xml
(+528 files in other folders)
