[package]
name = "zen-engine"
version = "0.1.0"
edition = "2021"
authors = ["workoss <workoss@icloud.com>"]


[lib]
crate_type = ["cdylib"]

[dependencies]
zen-engine = "^0.13.0"
serde_json = "^1.0.107"
tokio = { version = "^1.32.0", features = ["rt", "rt-multi-thread", "io-util", "macros", "net"] }
jni = "^0.21.1"


[profile.release]
lto = true #Link time opt链接过程优化，size减少大概50%
opt-level = 'z'
codegen-units = 1
panic = "abort"
strip = "debuginfo" #  -C strip flag 去除不必要的标头和调试信息，size减少大概30%
overflow-checks = true #运行期 溢出类型检查
