[package]
authors = ["workoss <workoss@icloud.com>"]
description = "rule engine desc"
edition = "2021"
name = "zen-engine"
version = "0.1.0"

[lib]
crate_type = ["cdylib"]

[dependencies]
jni = "0.21"
serde_json = "1.0"
tokio = {version = "1.36", features = ["rt", "macros", "rt-multi-thread"]}
zen-engine = "0.18"
zen-expression = "0.18"

[profile.release]
codegen-units = 1 
lto = true #Link time opt链接过程优化，size减少大概50%
opt-level = 'z' 
overflow-checks = true #运行期 溢出类型检查
panic = "abort" 
strip = "debuginfo" #  -C strip flag 去除不必要的标头和调试信息，size减少大概30%
