[package]
edition = "2021"
name = "cedar-runtime"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "workoss:plugin"

[package.metadata.component.target]
path = "../wit"
world = "plugin"

[package.metadata.component.dependencies]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-component-bindings = {git = "https://github.com/bytecodealliance/cargo-component"}
cedar-policy = "2.4.0"
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "^1.0.107"
