[package]
edition = "2021"
name = "cedar-runtime"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "workoss:plugin"

[package.metadata.component.target]
path = "../wit"
world = "plugin"

[package.metadata.component.dependencies]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-component-bindings = {git = "https://github.com/bytecodealliance/cargo-component"}
cedar-policy = "2.4.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[profile.release]
codegen-units = 1 
lto = true #Link time opt链接过程优化，size减少大概50%
opt-level = 'z' 
overflow-checks = true #运行期 溢出类型检查
panic = "abort" 
strip = "debuginfo" #  -C strip flag 去除不必要的标头和调试信息，size减少大概30%
